test/fail/basic_syntax/bad_comma.lily
#[
SyntaxError: Unexpected token ,.
    from bad_comma.lily:6:
]#

var a = 10    a = 10,
